Finalising index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div>
               <form action="" class="modal-body">
 
-                <!-- <label for="username">Username</label>
+                <label for="username">Username</label>
                 <input type="text" name="username" required="true" placeholder="Enter your username">
                 <label for="password1">Password</label>
                 <input type="password" name="password1" required="true" placeholder="Enter your password">
@@ -96,7 +96,7 @@
                <span class="calling" data-toggle="modal" data-target="#SignUpCenter"data-dismiss="modal" data-backdrop="static" data-keyboard="false">
                 Sign Up
                </span>
-              </h4> -->
+              </h4>
             </div>
           </div>
         </div>
